--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -5,4 +5,13 @@
 }
 
 <h2>@Model.Name</h2>
+<ul>
+    <li>Membership Type : @Model.MembershipType.Name</li>
+</ul>
 
+@if (Model.Birthdate.HasValue)
+{
+    <ul>
+        <li>Birthdate : @Model.Birthdate.Value.ToShortDateString()</li>
+    </ul>
+}
