--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -6,6 +6,9 @@
 }
 
 <h2>Movies</h2>
+<p>
+    @Html.ActionLink("New Movie", "New", "Movies", null, new {@class="btn btn-primary"})
+</p>
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
@@ -17,7 +20,7 @@
     @foreach (var movies in Model)
     {
         <tr>
-            <td>@Html.ActionLink(movies.Name, "Details", "Movies", new {id = movies.Id}, null)</td>
+            <td>@Html.ActionLink(movies.Name, "Edit", "Movies", new {id = movies.Id}, null)</td>
             <td>@movies.Genre.Name</td>
         </tr>
     }
