--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,32 +1,40 @@
 ﻿@model Vidly.ViewModels.CustomerFormViewModel
-@{
-    /**/
 
-    ViewBag.Title = "MovieForm";
+@{
+    ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MovieForm Customer</h2>
+<h2>New Customer</h2>
 
 @using (@Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
+    </div>
+    <div class="form-group">
+        <label for="MembershipTypeId">Membership Type</label>
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
     </div>
     <div class="form-group">
         <label for="Birthdate">Date of Birth</label>
         @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MMM yyyy}", new { @class = "form-control" })
-    </div>
-    <div class="form-group">
-        <label for="MembershipTypeId">Membership Types</label>
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     <div class="form-check">
-        <label class="form-check-label" for="IsSubscribedToMovieFormsLetter">Subscribed To MovieFormsletter?</label>
+        <label class="form-check-label" for="IsSubscribedToNewsLetter">Subscribed To News letter?</label>
         @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter)
     </div>
     @Html.HiddenFor(m => m.Customer.Id);
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
 
