--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -40,18 +40,20 @@ else
 {
     <script>
         $(document).ready(function () {
-            $("#customers .js-delete").on("click", function () {
-                if (confirm("Are you sure you want to delete this customer?")) {
-                    var button = $(this);
-                    $.ajax({
-                        url: "/api/customers/" + button.attr("data-customer-id"),
-                        method: "DELETE",
-                        success: function() {
-                            button.parents("tr").remove();
+            $("#customers").on("click",".js-delete", function () {
+
+                bootbox.confirm("Are you sure you want to delete this customer?",
+                    function(result) {
+                        if (result) {
+                            $.ajax({
+                                url: "/api/customers/" + button.attr("data-customer-id"),
+                                method: "DELETE",
+                                success: function() {
+                                    button.parents("tr").remove();
+                                }
+                            });
                         }
                     });
-                }
-                
             });
         });
     </script>
