--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -7,24 +7,65 @@
 
 <h2>Movies</h2>
 <p>
-    @Html.ActionLink("New Movie", "New", "Movies", null, new {@class="btn btn-primary"})
+    @Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
 </p>
-<table class="table table-bordered table-hover">
+<table id="movies" class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>Movies</th>
             <th>Genre</th>
+            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
-    @foreach (var movies in Model)
-    {
-        <tr>
-            <td>@Html.ActionLink(movies.Name, "Edit", "Movies", new {id = movies.Id}, null)</td>
-            <td>@movies.Genre.Name</td>
-        </tr>
-    }
     </tbody>
 </table>
 
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
 
+           var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies/",
+                    dataSrc : ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function(data, type, movies) {
+                            return "<a href='/movies/edit/" + movies.id + "'>" + movies.name + "</a>";
+                        }
+                    },
+                    {
+                        data : "name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-movies-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
+
+            $("#movies").on("click", ".js-delete",
+                function () {
+                    var button = $(this);
+                    bootbox.confirm("Are you sure you want to delete this movie?",
+                        function (result) {
+                            if (result) {
+                                $.ajax({
+                                    url: "/api/movies/" + button.attr("data-movies-id"),
+                                    method: "DELETE",
+                                    success: function () {
+                                        table.row(button.parents("tr")).remove().draw();
+                                    }
+                                });
+                            }
+                        });
+                });
+        });
+    </script>
+}
