--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -34,12 +34,12 @@
                 columns: [
                     {
                         data: "name",
-                        render: function(data, type, movies) {
-                            return "<a href='/movies/edit/" + movies.id + "'>" + movies.name + "</a>";
+                        render: function(data, type, movie) {
+                            return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
                         }
                     },
                     {
-                        data : "name"
+                        data : "genre.name"
                     },
                     {
                         data: "id",
